feat(backend): added edit and delete to calendars
